--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -3,28 +3,29 @@
 <head>
     <title>Crea richesta</title>
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+
     <link href="../../assets/img/favicon.png" rel="icon"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../assets/css/bootstrap-theme.min.css" rel="stylesheet"/>
+    <link href="../../assets/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="../../assets/css/selectize.bootstrap4.min.css" rel="stylesheet"/>
+    <link href="../../assets/css/datatables.min.css" rel="stylesheet"/>
 
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css" rel="stylesheet"/>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/css/selectize.bootstrap4.min.css"
-          rel="stylesheet"/>
-
-    <link href="../../assets/css/common.css?1334423323" rel="stylesheet"/>
+    <link href="../../assets/css/common.css" rel="stylesheet"/>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../assets/js/jquery.min.js"></script>
 
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/js/standalone/selectize.min.js"></script>
+    <script src="../../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../../assets/js/jquery-ui.min.js"></script>
+    <script src="../../assets/js/selectize.min.js"></script>
+    <script src="../../assets/js/datatables.min.js"></script>
 
-    <script src="../../assets/js/request.js?122327565543334"></script>
-    <script src="../../assets/js/generators.js?145753246253234"></script>
-    <script src="../../assets/js/record_edit.js?1255345643374234"></script>
-    <script src="../../assets/js/append_img_request_state.js?715563254232534"></script>
-    <script src="../../assets/js/queries.js?132545752632534"></script>
+    <script src="../../assets/js/request.js"></script>
+    <script src="../../assets/js/generators.js"></script>
+    <script src="../../assets/js/record_edit.js"></script>
+    <script src="../../assets/js/append_img_request_state.js"></script>
+    <script src="../../assets/js/queries.js"></script>
     <script>
         function autocomplete_init(codes, descriptions) {
             const data = codes.map((code, index) => Object.fromEntries([["code", code], ["name", descriptions[index]]]))
