--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -7,7 +7,7 @@
     <link href="../../assets/img/favicon.png" rel="icon"/>
     <link href="../../assets/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="../../assets/css/bootstrap-theme.min.css" rel="stylesheet"/>
-    <link href="../../assets/css/font-awesome.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="../../assets/css/selectize.bootstrap4.min.css" rel="stylesheet"/>
     <link href="../../assets/css/datatables.min.css" rel="stylesheet"/>
 
