Fixed map loading warnings and character encodings in pages

--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -2,7 +2,7 @@
 <html lang="it">
     <head>
         <title>Gestione Conteggi</title>
-        <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
+        <meta charset="utf-8" content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
 
         <link href="../../assets/img/favicon.png" rel="icon" />
         <link href="../../assets/css/bootstrap.min.css" rel="stylesheet" />
