--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
     <title>Crea richesta</title>
-    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+    <meta charset="utf-8" content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
 
     <link href="../../assets/img/favicon.png" rel="icon"/>
     <link href="../../assets/css/bootstrap.min.css" rel="stylesheet"/>
