Updated todo Fixed typo in warehouse

--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -360,7 +360,7 @@
                 </div>
                 <div class="row col-12 justify-content-center" style="padding-top: 10px">
                     <div class="col-10 form-group row col-12 margin-10">
-                        <button class="styled-btn btn-blue" id="btn-count" name="update">Articoli Contati</button>
+                        <button class="styled-btn btn-blue" id="btn-count" name="update">Conferma</button>
                     </div>
                 </div>
             </div>
