--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -302,7 +302,7 @@
                             </div>
                         </div>
                         <div class="form-group col no-gutters">
-                            <label class="col-11 col-form-label">Articoli Contati</label>
+                            <label class="col-11 col-form-label">Conferma</label>
                             <div class="row col-11">
                                 <div class="form-group col no-gutters">
                                     <div class="col-12">
