Translated english text

--- a/client/src/pages/warehouse/warehouse_homepage_operator.html
+++ b/client/src/pages/warehouse/warehouse_homepage_operator.html
@@ -124,7 +124,7 @@
                                 location.reload();
                             }
                         } else {
-                            alert("No empty fields or negatives numbers are accepted");
+                            alert("Non sono accettati campi vuoti o numeri negativi");
                         }
                     });
                 });
