--- a/client/src/pages/warehouse/warehouse_homepage_director.html
+++ b/client/src/pages/warehouse/warehouse_homepage_director.html
@@ -139,7 +139,7 @@
                                 location.reload();
                             }
                         } else {
-                            alert("No empty fields or negatives numbers are accepted");
+                            alert("Non sono accettati campi vuoti o numeri negativi");
                         }
                     });
                 });
