--- a/client/src/screens/warehouse/warehouse_homepage_operator.html
+++ b/client/src/screens/warehouse/warehouse_homepage_operator.html
@@ -4,7 +4,7 @@
         <title>Gestione Conteggi</title>
         <meta charset="utf-8" content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
 
-        <link href="../../assets/img/favicon.png" rel="icon" />
+        <link href="../../assets/images/favicon.png" rel="icon" />
         <link href="../../assets/css/bootstrap.min.css" rel="stylesheet" />
         <link href="../../assets/css/bootstrap-theme.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -25,7 +25,6 @@
         <script src="../../assets/js/record_edit.js"></script>
         <script src="../../assets/js/append_img_request_state.js"></script>
         <script src="../../assets/js/queries.js"></script>
-
         <script>
             function make_editable(element) {
                 $("#edit-popup").show();
@@ -53,24 +52,10 @@
                         min: today,
                     });
                     $("#date_creation").val(creationDate);
-
-                    //EXPECTED COUNT
-                    const expected_count_requester = new Requester(function (warehouseExpectedCount) {
-                        $("#expected_count").val(warehouseExpectedCount.results.N_TOT[0]);
-                    });
-                    expected_count_requester.query({
-                        q_name: "warehouse_expected_count",
-                        q_data: {
-                            "f.productCode": warehouseRequestsDetails.results[0].productCode,
-                            "f.productFlavour": warehouseRequestsDetails.results[0].productFlavour,
-                            "f.currentYear": now.getFullYear(),
-                        },
-                    });
                     //EXPECTED GROUND COUNT
                     const expected_ground_count_requester = new Requester(function (expectedGroundCount) {
                         const arrayOfGroundCount = expectedGroundCount.results.PRELEVATO;
                         let sumOfGroundCount = arrayOfGroundCount ? arrayOfGroundCount.reduce((a, b) => Number(a) + Number(b), 0) : 0;
-
                         if (arrayOfGroundCount) {
                             $("#expected_ground_count").val(sumOfGroundCount);
                         } else {
@@ -99,7 +84,7 @@
                             $("#productLocation").text("No location found!");
                         } else {
                             $("#productLocation").text(
-                                `${warehouseGetProductLocation.results.ALTEZZA[0]} ${warehouseGetProductLocation.results.CORRIDOIO[0]} ${warehouseGetProductLocation.results.TRAVERSA[0]} ${warehouseGetProductLocation.results.ZONA[0]}`
+                                `${warehouseGetProductLocation.results.ZONA[0]} ${warehouseGetProductLocation.results.CORRIDOIO[0]} ${warehouseGetProductLocation.results.TRAVERSA[0]} ${warehouseGetProductLocation.results.ALTEZZA[0]}`
                             );
                         }
                     });
@@ -152,7 +137,7 @@
             }
 
             function register_clicks() {
-                $(".table-row").dblclick(function (e) {
+                $(".table-row").click(function (e) {
                     make_editable($(this));
                 });
 
@@ -178,8 +163,8 @@
                     PRODOTTO: "productName",
                     VARIANTE: "productFlavour",
                     NOTE: "notes",
-                    "DATA RICHIESTA [dd/mm/yyyy]": "requestDate",
-                    "DATA SCADENZA [dd/mm/yyyy]": "dueDate",
+                    "DATA RICHIESTA": "requestDate",
+                    "DATA SCADENZA": "dueDate",
                 };
                 const table_data_requester = new Requester((warehouseRequests) => {
                     table_maker(warehouseRequests.results, "request-table-container", table_headers_strings);
@@ -226,7 +211,6 @@
                                         <span class="form-text text-muted" id="prod_codeHelpBlock">Codice assegnato al prodotto</span>
                                     </div>
                                 </div>
-
                                 <div class="form-group col-2 no-gutters">
                                     <label class="col-12 col-form-label" for="prod_variant">Variante Prodotto</label>
                                     <div class="col-12">
@@ -334,29 +318,8 @@
 
                         <!-- Expected Counts -->
                         <div class="row">
-                            <label class="col-1 col-form-label">Conteggi</label>
+                            <label class="col-1 col-form-label">Conte</label>
                             <div class="row col-11">
-                                <div class="form-group col no-gutters">
-                                    <label class="col-12 col-form-label" for="expected_count">Previsti Totali</label>
-                                    <div class="col-12">
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <div class="input-group-text">
-                                                    <i class="fa fa-bar-chart-o"></i>
-                                                </div>
-                                            </div>
-                                            <input
-                                                aria-describedby="expected_countHelpBlock"
-                                                class="form-control"
-                                                id="expected_count"
-                                                name="expected_count"
-                                                readonly
-                                                type="number"
-                                            />
-                                        </div>
-                                    </div>
-                                </div>
-
                                 <div class="form-group col no-gutters">
                                     <label class="col-12 col-form-label" for="expected_ground_count">A Terra</label>
                                     <div class="col-12">
@@ -370,48 +333,52 @@
                                         </div>
                                     </div>
                                 </div>
-
                                 <div class="form-group col no-gutters">
-                                    <label class="col-12 col-form-label">Contati</label>
-                                    <div class="col-12">
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <div class="input-group-text">
-                                                    <i class="fa fa-bar-chart-o"></i>
+                                    <label class="col-11 col-form-label">Contati</label>
+                                    <div class="row col-11">
+                                        <div class="form-group col no-gutters">
+                                            <div class="col-12">
+                                                <div class="input-group">
+                                                    <div class="input-group-prepend">
+                                                        <div class="input-group-text">
+                                                            <i class="fa fa-bar-chart-o"></i>
+                                                        </div>
+                                                    </div>
+                                                    <input
+                                                        aria-describedby="counted_itemsHelpBlock"
+                                                        class="form-control margin-5"
+                                                        id="counted_items"
+                                                        name="counted_items"
+                                                        required
+                                                        type="number"
+                                                    />
                                                 </div>
                                             </div>
-                                            <input
-                                                aria-describedby="counted_itemsHelpBlock"
-                                                class="form-control margin-5"
-                                                id="counted_items"
-                                                name="counted_items"
-                                                required
-                                                type="number"
-                                            />
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                <div class="row col-12 justify-content-center" style="padding-top: 10px">
-              <span style="text-align: center; font-weight: 800; font-size: 1.5rem"
-              >Ubicazione Standard: <span id="productLocation" style="font-weight: 600; font-size: 1.8rem"></span
-              ></span>
-                </div>
-                <div class="row col-12 justify-content-center" style="padding-top: 10px">
-                    <div class="col-10 form-group row col-12 margin-10">
-                        <button class="styled-btn btn-blue" id="btn-count" name="update">Conferma</button>
+                        <div class="row col-12 justify-content-center" style="padding-top: 10px">
+                            <span style="text-align: center; font-weight: 800; font-size: 1.5rem"
+                                >Location standard: <span id="productLocation" style="font-weight: 600; font-size: 1.8rem"></span
+                            ></span>
+                        </div>
+
+                        <div class="row col-12 justify-content-center" style="padding-top: 10px">
+                            <div class="col-10 form-group row col-12 margin-10">
+                                <button class="styled-btn btn-blue" id="btn-count" name="update">Conferma</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
 
             <!--  -->
             <!-- Header -->
             <!--  -->
-            <div class="header weight-800">Gestione Conteggi Magazzino</div>
+            <div class="header weight-800">Gestione Conteggi Operatore</div>
 
             <div class="request-table" id="request-table-container"></div>
         </main>
