--- a/client/src/ind.html
+++ b/client/src/ind.html
@@ -109,7 +109,7 @@
 </div>
 <main>
     <div class="module-container">
-        <iframe class="module" name="module" src="screens/old/rubrica.php" ></iframe>
+        <iframe class="module" name="module" src="pages/old/rubrica.php" ></iframe>
     </div>
 </main>
 
